Fixing JIRA Issue AXIS2C-1000. Thanks, Frank for pointing this out.